--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,17 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
+      - name: Create .env file
+        run: |
+          {
+            echo VITE_FIREBASE_API_KEY="${{ secrets.FIREBASE_API_KEY }}"
+            echo VITE_FIREBASE_AUTH_DOMAIN="${{ secrets.FIREBASE_AUTH_DOMAIN }}"
+            echo VITE_FIREBASE_PROJECT_ID="${{ secrets.FIREBASE_PROJECT_ID }}"
+            echo VITE_FIREBASE_STORAGE_BUCKET="${{ secrets.FIREBASE_STORAGE_BUCKET }}"
+            echo VITE_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}"
+            echo VITE_FIREBASE_APP_ID="${{ secrets.FIREBASE_APP_ID }}"
+          } >> .env 2>/dev/null
+
       - name: Build project
         run: npm run build
 
