--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.5.3",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
