--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
