--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,7 +31,8 @@
       "@lib/*": ["src/lib/*"],
       "@pages/*": ["src/pages/*"],
       "@store/*": ["src/store/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@layouts/*": ["src/layouts/*"]
     }
   },
   "include": ["src"]
