--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -32,7 +32,8 @@
       "@pages/*": ["src/pages/*"],
       "@store/*": ["src/store/*"],
       "@utils/*": ["src/utils/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@layouts/*": ["src/layouts/*"],
+      "@services/*": ["src/services/*"]
     }
   },
   "include": ["src"]
