--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.0.2",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
