--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
+    "recharts": "^2.15.3",
     "vite-tsconfig-paths": "^5.1.4",
     "zustand": "^5.0.4"
   },
