animations for stats page

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,7 +35,8 @@
       "@utils/*": ["src/utils/*"],
       "@layouts/*": ["src/layouts/*"],
       "@services/*": ["src/services/*"],
-      "@themes/*": ["src/themes/*"]
+      "@themes/*": ["src/themes/*"],
+      "@hooks/*": ["src/hooks/*"]
     }
   },
   "include": ["src"]
