--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
             echo VITE_FIREBASE_APP_ID="${{ secrets.FIREBASE_APP_ID }}"
           } >> .env 2>/dev/null
 
+      - name: Debug .env file keys
+        run: cat .env | cut -d= -f1
+
       - name: Build project
         run: npm run build
 
