--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -31,8 +31,11 @@ jobs:
             echo VITE_FIREBASE_APP_ID="${{ secrets.FIREBASE_APP_ID }}"
           } >> .env 2>/dev/null
 
-      - name: Debug .env file keys
-        run: cat .env | cut -d= -f1
+      - name: Confirm .env and vite.config.ts are in same dir
+        run: |
+          ls -la
+          cat .env
+          cat vite.config.ts | grep import.meta.env || true
 
       - name: Build project
         run: npm run build
