--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -16,6 +16,16 @@ jobs:
 
       - name: Setup Node
         uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
@@ -30,6 +40,9 @@ jobs:
             echo VITE_FIREBASE_MESSAGING_SENDER_ID="${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}"
             echo VITE_FIREBASE_APP_ID="${{ secrets.FIREBASE_APP_ID }}"
           } >> .env 2>/dev/null
+
+      - name: Run tests
+        run: npm run test
 
       - name: Build project
         run: npm run build
