--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "test": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.8",
@@ -31,10 +33,13 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@noble/hashes": "^1.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "cd": "^0.3.3",
+    "cessate": "file:",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -44,6 +49,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "vitest": "^3.1.3"
   }
 }
