--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview",
     "format": "prettier --write ./src",
     "test": "vitest run",
+    "test:verbose": "vitest run --silent=false",
     "test:watch": "vitest watch"
   },
   "dependencies": {
@@ -33,10 +34,12 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@noble/hashes": "^1.8.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.2",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.3.4",
     "cd": "^0.3.3",
     "cessate": "file:",
@@ -45,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "prettier": "3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
