--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "vite preview",
     "format": "prettier --write ./src",
     "test": "vitest run",
-    "test:verbose": "vitest run --silent=false",
+    "test:debug": "vitest run --silent=false --test-timeout=0 --no-file-parallelism",
     "test:watch": "vitest watch"
   },
   "dependencies": {
